maintained test and driver + fixing scrollBar vertical

--- a/src/ScrollBar/scrollbar.css
+++ b/src/ScrollBar/scrollbar.css
@@ -120,6 +120,7 @@
     max-width: none;
     transform: rotate( 90deg );
     transform-origin: left top;
+    height: 5px;
     .range
     {
         position: absolute;
