--- a/src/ScrollBox/scrollBox.css
+++ b/src/ScrollBox/scrollBox.css
@@ -20,8 +20,8 @@
         overflow          : scroll;
         width             : calc( 100% + var( --ScrollBarWidth ) );
         max-height        : calc( 100% + var( --ScrollBarHeight ) );
-        margin-bottom     : var( --ScrollBarMarginX );
-        margin-right      : var( --ScrollBarMarginY );
+        margin-bottom     : var( --ScrollBarMarginY );
+        margin-right      : var( --ScrollBarMarginX );
     }
 
     .icon__down,
@@ -75,18 +75,20 @@
 
 .scroll__horizontal
 {
-    .scrollBox
+    .inner
     {
         overflow-y:             hidden;
+        overflow-x:             scroll;
         overscroll-behavior-x:  contain;
     }
 
 }
 .scroll__vertical
 {
-    .scrollBox
+    .inner
     {
         overflow-x:             hidden;
+        overflow-y:             scroll;
         overscroll-behavior-y:  contain;
     }
 }
